--- a/app/Resources/views/course/course-show.html.twig
+++ b/app/Resources/views/course/course-show.html.twig
@@ -110,8 +110,10 @@
 
   {{ slot('course.bottom.extension', {'course': course}) }}
   {% if is_show_ai_agent(course.id) %}
-    <input type="hidden" name="aiAgentToken" value="{{ ai_agent_token() }}" />
-    <input type="hidden" name="aiTeacherDomain" value="{{ ai_teacher_domain(course.id) }}" />
-    <input type="hidden" name="studyPlanGenerated" value="0" />
+    <input type="hidden" id="aiAgentToken" value="{{ ai_agent_token() }}" />
+    <input type="hidden" id="aiTeacherDomain" value="{{ ai_teacher_domain(course.id) }}" />
+    <input type="hidden" id="agentCourseId" value="{{ course.id }}" />
+    <input type="hidden" id="agentCourseName" value="{{ course.courseSetTitle }}" />
+    <input type="hidden" id="studyPlanGenerated" value="0" />
   {% endif %}
 {% endblock %}
