--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -54,6 +54,7 @@
   <script src="{{ asset('static-dist/es5-shim/es5-shim.js') }}"></script>
   <script src="{{ asset('static-dist/es5-shim/es5-sham.js') }}"></script>
   <![endif]-->
+  <script src="{{ asset('static-dist/libs/agent-web-sdk/agent-sdk.iife.js') }}"></script>
 
   {% block stylesheets %}
     {% include 'css_loader.html.twig' %}
