--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -158,9 +158,13 @@
   </div>
 
   {% if is_show_ai_agent(course.id) %}
-    <input type="hidden" name="aiAgentToken" value="{{ ai_agent_token() }}" />
-    <input type="hidden" name="aiTeacherDomain" value="{{ ai_teacher_domain(course.id) }}" />
-    <input type="hidden" name="studyPlanGenerated" value="0" />
+    <input type="hidden" id="aiAgentToken" value="{{ ai_agent_token() }}" />
+    <input type="hidden" id="aiTeacherDomain" value="{{ ai_teacher_domain(course.id) }}" />
+    <input type="hidden" id="studyPlanGenerated" value="{{ is_study_plan_generated(course.id) }}" />
+    <input type="hidden" id="agentCourseId" value="{{ course.id }}" />
+    <input type="hidden" id="agentCourseName" value="{{ course.courseSetTitle }}" />
+    <input type="hidden" id="agentLessonId" value="{{ task.id }}" />
+    <input type="hidden" id="agentLessonName" value="{{ task.title }}" />
   {% endif %}
 
   <div id="login-modal" class="modal" data-url="{{ path('login_ajax') }}"></div>
