--- a/app/Resources/static-src/app/less/v2/page/course-manage/course-body.less
+++ b/app/Resources/static-src/app/less/v2/page/course-manage/course-body.less
@@ -45,7 +45,7 @@
 
 .courseset-manage-body {
   margin-top: 1px !important;
-  height: fit-content;
+  height: 100%;
   background-color: #fff;
   .border-radius;
   .cd-box-shadow;
