feat: #20250331 修改样式问题

--- a/app/Resources/static-src/app/less/v2/page/course-manage/course-body.less
+++ b/app/Resources/static-src/app/less/v2/page/course-manage/course-body.less
@@ -45,7 +45,7 @@
 
 .courseset-manage-body {
   margin-top: 1px !important;
-  height: 100%;
+  height: 1000px;
   background-color: #fff;
   .border-radius;
   .cd-box-shadow;
