--- a/app/Resources/views/course/course-show.html.twig
+++ b/app/Resources/views/course/course-show.html.twig
@@ -108,12 +108,9 @@
     }%}
 
   {{ slot('course.bottom.extension', {'course': course}) }}
-  {% if is_show_ai_agent(course.id) %}
+  {% if is_course_show_ai_agent(course.id) %}
     <input type="hidden" id="aiAgentToken" value="{{ ai_agent_token() }}" />
-    <input type="hidden" id="aiTeacherDomain" value="{{ ai_teacher_domain(course.id) }}" />
-    <input type="hidden" id="agentCourseId" value="{{ course.id }}" />
-    <input type="hidden" id="agentCourseName" value="{{ course.courseSetTitle }}" />
+    <input type="hidden" id="chatMetaData" value="{{ get_course_chat_meta_data(course) }}" />
     <input type="hidden" id="studyPlanGenerated" value="{{ is_study_plan_generated(course.id) }}" />
-    <input type="hidden" id="workerUrl" value="{{ url('agent_worker') }}" />
   {% endif %}
 {% endblock %}
