feat: #20250401 完成答疑动画

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -97,6 +97,7 @@
 @import "component/reviews.less";
 
 @import "component/mobile-mask.less";
+@import "component/ai-agent.less";
 
 // 模块---------------------------------------------------------------//
 @import "module/class-serve.less";    // 班级服务
