--- a/app/Resources/static-src/app/less/admin-v2.less
+++ b/app/Resources/static-src/app/less/admin-v2.less
@@ -38,4 +38,5 @@
 @import 'admin-v2/page/ai-analysis.less';
 @import 'admin-v2/page/reward-point-account.less';
 @import 'admin-v2/page/survey-modal.less';
+@import 'admin-v2/page/mobile-bind.less';
 @import 'admin-v2/page/apply-modal.less';
