--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -7,9 +7,9 @@
   {{ 'admin_v2.secondary.verification.security_verification'|trans }}
 {% endblock %}
 {% block body %}
-  <form id="mobile-bind-form" class="mobile-bind-form" method="post" action="{{ path('settings_bind_mobile')}}" data-user-id="{{app.user.id}}" style="margin-top: 46px;">
+  <form id="mobile-bind-form" class="mobile-bind-container" method="post" action="{{ path('settings_bind_mobile')}}" data-user-id="{{app.user.id}}">
     <div class="form-group cd-form-group">
-      <label class="control-label" for="mobile">{{'site.mobile_bind.phone_number'|trans}}</label>
+      <label class="control-label" style="margin-bottom: 10px;" for="mobile">{{'site.mobile_bind.phone_number'|trans}}</label>
       <div class="controls"><p>{{ mobile|slice(0, 3) ~ '****' ~ mobile|slice(7, 4) }}</p></div>
     </div>
 
@@ -20,10 +20,9 @@
     {% endif %}
 
     <div class="form-group cd-form-group">
-      <label class="control-label" for="sms_code">{{'form.sms_code'|trans}}</label>
+      <label class="control-label" style="margin-bottom: 10px;" for="sms_code">{{'form.sms_code'|trans}}</label>
       <div class="controls cd-row">
         <div class="col-xs-6">
-{#          <input type="text" maxlength="6" class="form-control input-sm" id="sms_code" name="sms_code" placeholder="{{'user.settings.security.input_sms_code'|trans}}">#}
           <input type="text" maxlength="6" class="form-control input-sm" id="sms_code" name="sms_code" placeholder="{{'user.settings.security.input_sms_code'|trans}}" data-url="{{path('edu_cloud_sms_check',{type:'sms_secondary_verification'})}}">
           <p class="help-block"> </p>
         </div>
@@ -37,7 +36,8 @@
     </div>
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     <input class="form-control" type="hidden" id="mobile" name="mobile" value="{{ mobile }}"/>
-    <a class="{% if not showDownLoadText|default(1)  %}color-primary{% else %} cd-btn {% endif %} mhs {{ exportClass|default('cd-btn-primary') }} js-export-btn"
+{#        <div style="display:none" class="hide-js-export-btn">#}
+    <a class="{% if not showDownLoadText|default(1)  %}color-primary{% else %} btn cd-btn cd-btn-lg mobile-bind-form__btn {% endif %} mhs {{ exportClass|default('cd-btn-primary') }} js-export-btn"
        href="javascript:;"
        data-try-url="{{ path('try_export', {'name':exportFileName, 'limit': exportLimit|default('')}) }}"
        data-url="{{ path('export',{'name':exportFileName, 'customFileName': customFileName|default('')}) }}"
@@ -46,15 +46,12 @@
        data-target-form="#{{ targetFormId }}"
        data-file-names="{{ fileNames|default([exportFileName])|json_encode }}"
     >
-      <i class="es-icon es-icon-filedownload cd-text-lg"></i>
+      <i class="cd-text-lg"></i>
       {% if showDownLoadText|default(1) %}
-        {{ text|default('form.btn.export')|trans }}
+        {{ text|default('form.btn.submit')|trans }}
       {% endif %}
     </a>
+{#        </div>#}
   </form>
-
-{% endblock %}
-
-{% block footer %}
 
 {% endblock %}
