feat: #111011 针对特定场景生效

--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -27,7 +27,7 @@
           <p class="help-block"> </p>
         </div>
         <div class="col-xs-6">
-          <button type="button" class="btn cd-btn cd-btn-ghost-primary btn-block js-sms-send sms-send-btn"   data-url="{{ path('edu_cloud_sms_send_check_captcha') }}">
+          <button type="button" style="padding-right:2px;" class="btn cd-btn cd-btn-ghost-primary btn-block js-sms-send sms-send-btn"   data-url="{{ path('edu_cloud_sms_send_check_captcha') }}">
             <span id="js-time-left"></span>
             <span id="js-fetch-btn-text">{{'user.settings.security.get_sms_code_btn'|trans}}</span>
           </button>
