--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -7,7 +7,7 @@
   {{ 'admin_v2.secondary.verification.security_verification'|trans }}
 {% endblock %}
 {% block body %}
-  <form id="mobile-bind-form" class="mobile-bind-container" method="post" action="{{ path('settings_bind_mobile')}}" data-user-id="{{app.user.id}}">
+  <form id="mobile-bind-form" class="mobile-bind-container" data-user-id="{{app.user.id}}">
     <div class="form-group cd-form-group">
       <label class="control-label" style="margin-bottom: 10px;" for="mobile">{{'site.mobile_bind.phone_number'|trans}}</label>
       <div class="controls"><p>{{ mobile|slice(0, 3) ~ '****' ~ mobile|slice(7, 4) }}</p></div>
@@ -36,20 +36,27 @@
     </div>
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     <input class="form-control" type="hidden" id="mobile" name="mobile" value="{{ mobile }}"/>
-    <a class="{% if not showDownLoadText|default(1)  %}color-primary{% else %} btn cd-btn cd-btn-lg mobile-bind-form__btn {% endif %} mhs {{ exportClass|default('cd-btn-primary') }} js-export-btn"
-       href="javascript:;"
-       data-try-url="{{ path('try_export', {'name':exportFileName, 'limit': exportLimit|default('')}) }}"
-       data-url="{{ path('export',{'name':exportFileName, 'customFileName': customFileName|default('')}) }}"
-       data-pre-url="{{ path('pre_export',{'name':exportFileName}) }}"
-       data-loading-text="{{'form.btn.export.submiting'|trans}}"
-       data-target-form="#{{ targetFormId }}"
-       data-file-names="{{ fileNames|default([exportFileName])|json_encode }}"
-    >
-      <i class="cd-text-lg"></i>
-      {% if showDownLoadText|default(1) %}
-        {{ text|default('form.btn.submit')|trans }}
-      {% endif %}
-    </a>
+    {% if exportFileName == 'user' %}
+      <a class="btn cd-btn cd-btn-lg mobile-bind-form__btn js-export-user-btn cd-btn-primary" id="user-export" data-toggle="modal" data-target="#modal"
+         >{{ 'form.btn.submit'|trans }}</a>
+    {% else %}
+      <a class="{% if not showDownLoadText|default(1)  %}color-primary{% else %} btn cd-btn cd-btn-lg mobile-bind-form__btn {% endif %} mhs {{ exportClass|default('cd-btn-primary') }} js-export-btn"
+         href="javascript:;"
+         data-try-url="{{ path('try_export', {'name':exportFileName, 'limit': exportLimit|default('')}) }}"
+         data-url="{{ path('export',{'name':exportFileName, 'customFileName': customFileName|default('')}) }}"
+         data-pre-url="{{ path('pre_export',{'name':exportFileName}) }}"
+         data-loading-text="{{'form.btn.export.submiting'|trans}}"
+         data-target-form="#{{ targetFormId }}"
+         data-file-names="{{ fileNames|default([exportFileName])|json_encode }}"
+      >
+        <i class="cd-text-lg"></i>
+        {% if showDownLoadText|default(1) %}
+          {{ text|default('form.btn.submit')|trans }}
+        {% endif %}
+      </a>
+    {% endif %}
+
+
   </form>
 
 {% endblock %}
