feat: #111011 修复滑块样式缺失

--- a/app/Resources/static-src/app/less/admin-v2.less
+++ b/app/Resources/static-src/app/less/admin-v2.less
@@ -39,4 +39,5 @@
 @import 'admin-v2/page/reward-point-account.less';
 @import 'admin-v2/page/survey-modal.less';
 @import 'admin-v2/page/mobile-bind.less';
+@import 'admin-v2/page/login.less';
 @import 'admin-v2/page/apply-modal.less';
