--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -13,11 +13,11 @@
       <div class="controls"><p>{{ mobile|slice(0, 3) ~ '****' ~ mobile|slice(7, 4) }}</p></div>
     </div>
 
-{#    {% if (setting('auth.captcha_enabled')|default(0)) == 1 %}#}
-{#      <div class="form-group cd-mb24 js-drag-jigsaw hidden">#}
-{#        {% include 'common/drag.html.twig' with { auth: true } %}#}
-{#      </div>#}
-{#    {% endif %}#}
+    {% if (setting('auth.captcha_enabled')|default(0)) == 1 %}
+      <div class="form-group cd-mb24 js-drag-jigsaw hidden">
+        {% include 'common/drag.html.twig' with { auth: true } %}
+      </div>
+    {% endif %}
 
     <div class="form-group cd-form-group">
       <label class="control-label" style="margin-bottom: 10px;" for="sms_code">{{'form.sms_code'|trans}}</label>
