feat: #111011 修复其他按钮隐藏

--- a/app/Resources/views/admin-v2/trade/bill/form-filter.html.twig
+++ b/app/Resources/views/admin-v2/trade/bill/form-filter.html.twig
@@ -28,8 +28,10 @@
 </div>
 <button class="btn btn-primary">{{ 'form.btn.search'|trans }}</button>
 
-{% include 'export/export-btn.html.twig' with
-  {'exportFileName': exportName,
-  'targetFormId': 'bill-search-form'}
-%}
+{% if canExport %}
+  {% include 'export/export-btn.html.twig' with
+    {'exportFileName': exportName,
+    'targetFormId': 'bill-search-form'}
+  %}
+{% endif %}
 </form>
