--- a/app/Resources/views/classroom-manage/student.html.twig
+++ b/app/Resources/views/classroom-manage/student.html.twig
@@ -7,6 +7,7 @@
     <div id="student-list-app"
          data-classroom-id="{{ classroom.id }}"
          data-classroom-status="{{ classroom.status }}"
+         data-enable-export="{{ canExport }}"
     ></div>
   </div>
 {% endblock %}
