feat: #20250417 修改按钮样式

--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -75,7 +75,15 @@
         max-width: 350px; /* 介于modal-sm和modal-md之间 */
         margin: 1.75rem auto;
       }
+      /* 针对所有包含 cd-btn-lg 类的按钮 */
+      .cd-btn-lg {
+        width: 80% !important;
+        box-sizing: border-box !important;
+        display: block !important;  /* 转换为块级元素 */
+        margin: 0 auto !important;   /* 水平自动居中 */
+      }
     }
+
   </style>
 {% endblock %}
 
