feat: #111011 新增课程订单导出二次验证

--- a/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
+++ b/app/Resources/views/secondary-verification/secondary-verification-modal.html.twig
@@ -55,6 +55,9 @@
     {% elseif exportFileName == 'deleteUser' %}
       <a class="btn cd-btn cd-btn-lg mobile-bind-form__btn js-delete-user cd-btn-primary" id="delete-user" data-toggle="modal" data-target="#modal"
       >{{ 'form.btn.submit'|trans }}</a>
+    {% elseif exportFileName == 'courseOrder' %}
+      <a class="btn cd-btn cd-btn-lg mobile-bind-form__btn course-order-export cd-btn-primary" id="course-order" data-toggle="modal" data-target="#modal"
+      >{{ 'form.btn.submit'|trans }}</a>
     {% else %}
       <a class="{% if not showDownLoadText|default(1)  %}color-primary{% else %} btn cd-btn cd-btn-lg mobile-bind-form__btn {% endif %} mhs {{ exportClass|default('cd-btn-primary') }} js-export-btn"
          href="javascript:;"
