--- a/app/Resources/views/course-manage/panel-header/course-publish-header.html.twig
+++ b/app/Resources/views/course-manage/panel-header/course-publish-header.html.twig
@@ -14,6 +14,7 @@
 </div>
 {% if btnGroup|default() %}
   <div class="course-main-header__operation">
-    {% include 'course-manage/panel-header/' ~ code ~ '-btn-group.html.twig' with {code: code} %}
+    <button class="cd-btn cd-btn-primary cd-btn-sm course-order-js-export-btn" type="button" id="student-add-btn" data-toggle="modal" data-target="#modal"><i class="es-icon es-icon-filedownload"></i> {{'form.btn.export'|trans}}</button>
+    {% include 'export/export-modal.html.twig' %}
   </div>
 {% endif %}
