feat: #111011 重构交易订单导出

--- a/app/Resources/views/admin-v2/trade/order/list.html.twig
+++ b/app/Resources/views/admin-v2/trade/order/list.html.twig
@@ -60,7 +60,7 @@
 
       <button class="btn btn-primary">{{ 'form.btn.search'|trans }}</button>
       {% if canExport %}
-      <button class="btn-primary cd-btn cd-btn-info cd-btn-sm mhs" type="button" id="student-add-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('admin_v2_secondary_verification', {exportFileName:'order', targetFormId: 'order-search-form'}) }}"><i class="es-icon es-icon-filedownload"></i> {{'form.btn.export'|trans}}</button>
+      <button class="btn-primary cd-btn cd-btn-info cd-btn-sm mhs order-js-export-btn" type="button" id="student-add-btn"><i class="es-icon es-icon-filedownload"></i> {{'form.btn.export'|trans}}</button>
       {% include 'export/export-modal.html.twig' %}
       {% endif %}
     </div>
